--- a/my app/app/src/main/res/layout/forum_question_element.xml
+++ b/my app/app/src/main/res/layout/forum_question_element.xml
@@ -9,9 +9,10 @@
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#05ffffff"
+        android:background="#1f000000"
         android:paddingTop="5sp"
         android:paddingBottom="5sp"
+        android:paddingHorizontal="5sp"
         android:text="TextView"
         android:textColor="#fff"
         android:textSize="18sp"
