--- a/my app/app/src/main/res/layout/activity_admindash.xml
+++ b/my app/app/src/main/res/layout/activity_admindash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#444"
+    android:background="@drawable/dark"
     tools:context=".admindash">
 
     <LinearLayout
@@ -21,7 +21,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:paddingTop="10sp"
+            android:paddingBottom="8sp"
+            android:background="@drawable/custom_s_border"
             android:orientation="horizontal">
 
             <ImageView
@@ -37,6 +39,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:textColor="@color/tg"
                 android:text="Administration"
                 android:textSize="25sp" />
         </LinearLayout>
@@ -45,8 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="#222"
-            android:layout_marginTop="8sp">
+            android:background="#222">
 
             <TextView
                 android:id="@+id/tgdata"
