--- a/my app/app/src/main/res/layout/activity_adminlogin.xml
+++ b/my app/app/src/main/res/layout/activity_adminlogin.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dark"
+
+    android:background="@drawable/rural2"
+    android:id="@+id/admin"
     tools:context=".Adminlogin">
 
     <ProgressBar
@@ -52,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="5sp"
             android:text="email"
-            android:textColor="@color/tg"
+            android:textColor="#fff"
             android:textSize="15sp" />
 
         <EditText
@@ -65,7 +67,7 @@
         <TextView
             android:id="@+id/textView17"
             android:layout_width="match_parent"
-            android:textColor="@color/tg"
+            android:textColor="#fff"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5sp"
             android:layout_marginTop="40sp"
@@ -86,8 +88,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50sp"
             android:onClick="login"
-            android:textColor="@color/tg"
+
+           android:background="@drawable/shit"
             android:text="Login" />
+
+
 
     </LinearLayout>
 
