--- a/my app/app/src/main/res/layout/activity_rural__traveller.xml
+++ b/my app/app/src/main/res/layout/activity_rural__traveller.xml
@@ -6,6 +6,7 @@
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <LinearLayout
+        android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
@@ -14,7 +15,8 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="@drawable/bc"
+        android:background="@drawable/rural2"
+
         tools:context=".Rural_Traveller">
 
         <!-- Login progress -->
