--- a/my app/app/src/main/res/layout/activity_display_profile.xml
+++ b/my app/app/src/main/res/layout/activity_display_profile.xml
@@ -5,6 +5,7 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     tools:context=".display_profile"
+    android:background="#FFF"
     >
 
 
@@ -48,6 +49,8 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
@@ -66,6 +69,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Name"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:paddingLeft="125dp"
                 android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="@id/Name1"
@@ -86,6 +91,8 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
@@ -102,6 +109,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Email"
                 android:paddingLeft="125dp"
@@ -125,6 +134,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:layout_marginRight="8dp"
                 android:text="Gender"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -140,6 +151,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:hint="Enter Gender"
                 android:paddingLeft="125dp"
                 app:layout_constraintStart_toStartOf="@id/Gender1"
@@ -161,6 +174,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:text="Date ofBirth"
@@ -179,6 +194,8 @@
                 android:layout_marginRight="8dp"
                 android:hint="Enter Date of Birth"
                 android:paddingLeft="125dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintStart_toStartOf="@id/Dob1"
 
                 />
@@ -197,6 +214,8 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
@@ -216,6 +235,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Mobile Number"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:paddingLeft="125dp"
                 android:textAlignment="center"
                 app:layout_constraintStart_toStartOf="@id/Mob1"
@@ -239,6 +260,8 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:text="Address"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/Add1"
@@ -254,6 +277,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Address"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 android:paddingLeft="125dp"
                 app:layout_constraintStart_toStartOf="@id/Add1"
 
