--- a/my app/app/src/main/res/layout/activity_adminlogin.xml
+++ b/my app/app/src/main/res/layout/activity_adminlogin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/dark"
+    android:background="#ddd"
     tools:context=".Adminlogin">
 
     <ProgressBar
@@ -37,7 +37,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/custom_s_border"
         android:layout_marginEnd="10dp"
         android:gravity="center"
         android:orientation="vertical"
@@ -60,6 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/tg"
+            android:paddingVertical="5sp"
+            android:background="#1f00aacc"
             android:inputType="textEmailAddress" />
 
         <TextView
@@ -77,6 +78,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:paddingVertical="5sp"
+            android:background="#1f00aacc"
             android:textColor="@color/tg"
             android:inputType="textPassword" />
 
@@ -85,7 +88,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50sp"
+            android:background="@drawable/user_account_button"
             android:onClick="login"
+
             android:textColor="@color/tg"
             android:text="Login" />
 
