--- a/my app/app/src/main/res/layout/activity_editprofile2.xml
+++ b/my app/app/src/main/res/layout/activity_editprofile2.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:fillViewport="true"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    tools:context=".editprofile2"
-    android:background="#FFF">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="#FFF"
+    tools:context=".editprofile2">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -17,22 +21,24 @@
         android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:foregroundGravity="center"
         android:src="@drawable/img"
         app:civ_border_color="@color/colorPrimary"
         app:civ_border_width="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:foregroundGravity="center"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="48dp"
+        android:layout_marginEnd="5dp"
         android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/photo1"
         tools:ignore="MissingConstraints">
@@ -46,14 +52,14 @@
 
             <TextView
                 android:layout_width="75dp"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:text="Name"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/photo1"
 
@@ -68,10 +74,10 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Name"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:paddingLeft="125dp"
                 android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintStart_toStartOf="@id/Name1"
 
                 />
@@ -90,12 +96,12 @@
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:text="Email"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/photo1"
 
@@ -110,9 +116,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Email"
+                android:paddingLeft="125dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                android:paddingLeft="125dp"
                 app:layout_constraintStart_toStartOf="@id/Name1"
 
                 />
@@ -130,13 +136,13 @@
             <TextView
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:text="Gender"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/Email1"
 
@@ -152,9 +158,9 @@
 
                 android:layout_marginRight="8dp"
                 android:hint="Enter Gender"
+                android:paddingLeft="125dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                android:paddingLeft="125dp"
                 app:layout_constraintStart_toStartOf="@id/Gender1"
 
                 />
@@ -166,10 +172,10 @@
             android:id="@+id/Dob1"
             android:layout_width="413dp"
             android:layout_height="match_parent"
-            android:textColor="@android:color/black"
-            android:textColorHint="@android:color/black"
             android:orientation="horizontal"
-            android:paddingBottom="20dp">
+            android:paddingBottom="20dp"
+            android:textColor="@android:color/black"
+            android:textColorHint="@android:color/black">
 
             <TextView
                 android:layout_width="75dp"
@@ -178,9 +184,9 @@
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
+                android:text="Date ofBirth"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                android:text="Date ofBirth"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/Dob1"
 
@@ -195,9 +201,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Date of Birth"
+                android:paddingLeft="125dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                android:paddingLeft="125dp"
                 app:layout_constraintStart_toStartOf="@id/Dob1"
 
                 />
@@ -218,10 +224,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:layout_marginRight="8dp"
                 android:text="Mobile No"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/Mob1"
 
@@ -236,10 +242,10 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Mobile Number"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:paddingLeft="125dp"
                 android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintStart_toStartOf="@id/Mob1"
 
                 />
@@ -260,10 +266,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginEnd="8dp"
-                android:textColor="@android:color/black"
-                android:textColorHint="@android:color/black"
                 android:layout_marginRight="8dp"
                 android:text="Address"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/Add1"
 
@@ -278,9 +284,9 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="Enter Address"
+                android:paddingLeft="125dp"
                 android:textColor="@android:color/black"
                 android:textColorHint="@android:color/black"
-                android:paddingLeft="125dp"
                 app:layout_constraintStart_toStartOf="@id/Add1"
 
                 />
@@ -306,3 +312,4 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </android.support.constraint.ConstraintLayout>
+</ScrollView>
