--- a/my app/app/src/main/res/layout/activity_forum_answer.xml
+++ b/my app/app/src/main/res/layout/activity_forum_answer.xml
@@ -56,6 +56,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25sp"
+            android:background="@drawable/user_account_button"
+            android:textColor="#047"
             android:text="SAVE" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
