--- a/my app/app/src/main/res/layout/fragment_user_account.xml
+++ b/my app/app/src/main/res/layout/fragment_user_account.xml
@@ -29,25 +29,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10sp"
+                    android:background="@drawable/user_account_button"
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
-                    
                     android:text="account details" />
                 <Button
                     android:id="@+id/wallet"
                     android:layout_width="match_parent"
-
+                    android:background="@drawable/user_account_button"
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
-                    
+
                     android:layout_height="wrap_content"
                     android:text="My Wallet" />
 
                 <Button
                     android:id="@+id/my_packages"
-
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
-                    
+                    android:background="@drawable/user_account_button"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="my_packages" />
@@ -55,7 +58,8 @@
                 <Button
                     android:id="@+id/favourites"
                     android:layout_width="match_parent"
-
+                    android:background="@drawable/user_account_button"
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
 
@@ -66,7 +70,8 @@
                     android:id="@+id/faq"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:background="@drawable/user_account_button"
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
 
@@ -76,51 +81,34 @@
                     android:id="@+id/forum"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:background="@drawable/user_account_button"
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
-                    
+
                     android:text="Forum" />
 
                 <Button
                     android:id="@+id/guideRating"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
-                    
+                    android:background="@drawable/user_account_button"
+
                     android:text="Guide Rating" />
 
                 <Button
                     android:id="@+id/changepass"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
                     android:layout_marginTop="10sp"
-                    
+                    android:background="@drawable/user_account_button"
+
                     android:text="Change Password" />
-
-                <Button
-                    android:id="@+id/help"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginHorizontal="10sp"
-                    android:layout_marginTop="10sp"
-                    
-                    android:text="help" />
-
-                <Button
-                    android:id="@+id/our_team"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-
-                    android:layout_marginHorizontal="10sp"
-                    android:layout_marginTop="10sp"
-                    
-                    android:text="our Team" />
 
                 <Button
                     android:id="@+id/logout"
@@ -128,9 +116,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10sp"
                     android:layout_marginTop="10sp"
-
+                    android:background="@drawable/user_account_button"
+                    android:textColor="#047"
                     android:layout_marginHorizontal="10sp"
-                    
+
                     android:text="Logout" />
             </LinearLayout>
         </android.support.constraint.ConstraintLayout>
