--- a/my app/app/src/main/res/layout/fragment_user_homefragment.xml
+++ b/my app/app/src/main/res/layout/fragment_user_homefragment.xml
@@ -69,7 +69,7 @@
                     android:id="@+id/textView19"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="BE THERE, DO THAT!"
+                    android:text="Be there, Do That!"
                     android:textColor="#047"
                     android:textSize="15sp" />
             </LinearLayout>
