--- a/my app/app/src/main/res/layout/package_element.xml
+++ b/my app/app/src/main/res/layout/package_element.xml
@@ -18,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="#6bcdfd"
             android:orientation="vertical">
 
             <ImageView
@@ -33,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="8dp"
                 android:text="TextView"
+                android:textColor="#047"
                 android:paddingLeft="10sp"
                 android:textSize="18sp" />
 
@@ -47,6 +49,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingLeft="10sp"
+                    android:textColor="#069"
                     android:paddingVertical="5sp"
                     android:text="TextView" />
 
@@ -56,6 +59,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingVertical="5sp"
+                    android:textColor="#069"
                     android:text="TextView" />
             </LinearLayout>
         </LinearLayout>
