--- a/my app/app/src/main/res/layout/activity_display_stay.xml
+++ b/my app/app/src/main/res/layout/activity_display_stay.xml
@@ -13,7 +13,9 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textAllCaps="true"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="#000"
         android:textSize="30dp"
         android:text="sdgdrds"
         android:layout_marginTop="15dp"
@@ -23,7 +25,7 @@
         android:id="@+id/DisplayImage"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:src="@drawable/rest"
+        android:src="@drawable/hotl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayTitle"
@@ -33,15 +35,15 @@
         android:id="@+id/DisplayContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/border"
         android:drawableLeft="@drawable/ic_local_phone_black_24dp"
-        android:layout_marginTop="28dp"
+        android:gravity="center"
         android:padding="10dp"
         android:text="947977971"
-        android:gravity="center"
         android:textSize="24dp"
-        android:background="@drawable/border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.177"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayImage" />
 
@@ -53,6 +55,7 @@
         android:layout_marginTop="25dp"
         android:text="Address"
         android:textSize="18dp"
+        android:textColor="#000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayContact"
@@ -65,6 +68,7 @@
         android:background="@drawable/borr"
         android:text="jkldjfl;ajg;ljdsajdskl;gjads;lgjdag"
         android:textSize="18dp"
+        android:textColor="#000"
         android:padding="15dp"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
