--- a/my app/app/src/main/res/layout/activity_displayeat.xml
+++ b/my app/app/src/main/res/layout/activity_displayeat.xml
@@ -16,6 +16,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="30dp"
         android:text="sdgdrds"
+        android:textAllCaps="true"
+        android:textColor="#000"
         android:layout_marginTop="15dp"
         android:textStyle="bold"
         />
@@ -23,7 +25,7 @@
         android:id="@+id/DisplayImagee"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:src="@drawable/rest"
+        android:src="@drawable/food"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayTitlee"
@@ -33,15 +35,16 @@
         android:id="@+id/DisplayContacte"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/border"
         android:drawableLeft="@drawable/ic_local_phone_black_24dp"
-        android:layout_marginTop="28dp"
+        android:gravity="center"
         android:padding="10dp"
         android:text="947977971"
-        android:gravity="center"
+        android:textColor="#000"
         android:textSize="24dp"
-        android:background="@drawable/border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.177"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayImagee" />
 
@@ -53,6 +56,7 @@
         android:layout_marginTop="25dp"
         android:text="Address"
         android:textSize="18dp"
+        android:textColor="#000"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayContacte"
@@ -66,6 +70,7 @@
         android:text="jkldjfl;ajg;ljdsajdskl;gjads;lgjdag"
         android:textSize="18dp"
         android:padding="15dp"
+        android:textColor="#000"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
