--- a/my app/app/src/main/res/layout/activity_displayvisit.xml
+++ b/my app/app/src/main/res/layout/activity_displayvisit.xml
@@ -14,34 +14,38 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textAllCaps="true"
+        android:textColor="#000"
         android:textSize="30dp"
         android:text="sdgdrds"
         android:layout_marginTop="15dp"
         android:textStyle="bold"
         />
+
     <ImageView
         android:id="@+id/DisplayImagev"
         android:layout_width="match_parent"
         android:layout_height="300dp"
-        android:src="@drawable/rest"
+        android:src="@drawable/scen"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DisplayTitlev"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/DisplayTitlev" />
 
     <TextView
         android:id="@+id/DisplayContactv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/borr"
+        android:gravity="center"
         android:padding="10dp"
         android:text=""
-        android:gravity="center"
+        android:textColor="#000"
         android:textSize="24dp"
-        android:background="@drawable/border"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.177"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DisplayImagev" />
 
@@ -67,6 +71,7 @@
         android:textSize="18dp"
         android:padding="15dp"
         android:gravity="center"
+        android:textColor="#000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Addrv" />
