--- a/my app/app/src/main/res/layout/activity_eatactivity.xml
+++ b/my app/app/src/main/res/layout/activity_eatactivity.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Eatactivity">
+    tools:context=".Eatactivity"
+    android:background="@drawable/dark"
+    >
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/VisitToolbar"
