--- a/my app/app/src/main/res/layout/activity_userdash.xml
+++ b/my app/app/src/main/res/layout/activity_userdash.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_gravity="bottom"
-        android:background="#aaa"
+        android:background="@color/colorPrimary"
         app:itemIconTint="#FFFF"
         app:itemTextColor="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
