--- a/my app/app/src/main/res/layout/activity_village_home.xml
+++ b/my app/app/src/main/res/layout/activity_village_home.xml
@@ -7,6 +7,7 @@
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.constraint.ConstraintLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/Const"
@@ -14,23 +15,26 @@
         android:background="@drawable/dark"
         >
 
-        <ScrollView
-            android:id="@+id/scrollView2"
+        <TextView
+            android:id="@+id/ThisTextView"
             android:layout_width="match_parent"
-            android:layout_height="200sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18sp"
+            android:background="@drawable/borr"
+            android:padding="12sp"
+            android:paddingHorizontal="16sp"
+            android:text="A place which captures your soul in the cold breeze of the mountains and mesmerizes the heart with the everpresent calmness that is so addictive that you cannot get out of it."
+            android:textColor="#000"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:layout_marginHorizontal="8sp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/VillageHomeLin">
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
 
-            <TextView
-                android:id="@+id/ButtonDecr"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="16sp"
-                android:text="jdlkfjaldjkl;aj'"
-                android:textColor="#000"
-                android:textSize="16sp" />
-        </ScrollView>
+
 
 
         <android.support.v7.widget.Toolbar
@@ -42,8 +46,21 @@
             app:layout_constraintTop_toTopOf="parent"
             android:background="#08b"
             />
+        <TextView
+            android:id="@+id/Title"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:actionBarSize"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text=""
+            android:paddingHorizontal="8sp"
+            android:textAllCaps="true"
+            android:textColor="#fff"/>
 
         <android.support.v4.view.ViewPager
+            android:layout_marginTop="10sp"
             android:id="@+id/VillageHomePager"
             android:layout_width="match_parent"
             android:layout_height="350sp"
@@ -71,63 +88,110 @@
             app:layout_constraintTop_toBottomOf="@id/VillageHomePager"/>
 
         <LinearLayout
+            android:layout_marginTop="15sp"
+            android:id="@+id/VillageHomeLinear"
             android:layout_width="match_parent"
-            android:layout_height="48sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="60sp"
+            android:layout_marginHorizontal="8sp"
+            android:elevation="8sp"
+            app:layout_constraintTop_toBottomOf="@id/VillageHomeLin"
+
             android:orientation="horizontal"
-            android:background="@color/colorPrimary">
-            <ImageView
+            >
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/StayButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_hotel_black_24dp"
+                android:src="@drawable/hotel"
                 android:onClick="Cicked"
                 android:layout_weight="1"
+                app:civ_border_width="2sp"
+                app:civ_border_color="@color/colorPrimary"
                 />
-            <ImageView
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/EatButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:onClick="Cicked"
-                android:src="@drawable/ic_local_dining_black_24dp"
-                android:layout_weight="1"/>
-            <ImageView
+                android:src="@drawable/eat"
+                android:layout_weight="1"
+                app:civ_border_width="2sp"
+                app:civ_border_color="@color/colorPrimary"/>
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/VisitButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/camera"
+                android:src="@drawable/visit"
                 android:onClick="Cicked"
-                android:layout_weight="1"/>
-            <ImageView
-                android:id="@+id/OccasionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/celebrations"
-                android:onClick="Cicked"
-                android:layout_weight="1"/>
-            <ImageView
+                android:layout_weight="1"
+                app:civ_border_width="2sp"
+                app:civ_border_color="@color/colorPrimary"/>
+
+            <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/MapButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_location_on_black_24dp"
+                android:src="@drawable/location"
                 android:onClick="Cicked"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                app:civ_border_width="2sp"
+                app:civ_border_color="@color/colorPrimary"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayout5"
+            android:layout_width="match_parent"
+            android:layout_height="25sp"
+            android:layout_marginHorizontal="8sp"
+            android:elevation="8sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/VillageHomeLinear">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Hotels"
+                android:textColor="#000" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Food"
+                android:textColor="#000" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Visit"
+                android:textColor="#000" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="Location"
+                android:textColor="#000" />
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/ButtonPackage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:id="@+id/ButtonPackage"
+            android:layout_marginTop="8dp"
             android:onClick="Cicked"
             android:src="@drawable/binoculars"
-            app:layout_constraintBottom_toTopOf="@+id/VillageHomePager"
             app:layout_constraintEnd_toEndOf="@+id/VillageHomePager"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ToolbarVillHome"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
